@@ -1,3 +1,7 @@
+20170912
+--------
+- Fixed #33635 - Possible Olingo issue with complex types generated by means of NEST
+
 20170821
 --------
 - Added #33444 - Debug support
